[package]
name = "backupdbtool"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backupdbtool"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.16"
once_cell = "1.18"
async-trait = "0.1"
clap = { version = "4.5.48", features = ["derive"] }
glob = "0.3"
qcos = "0.1"
dirs = "6.0.0"
quickxml_to_serde = "0.6"
tabled = "0.20"
reqwest = { version = "0.12", features = ["json"] }
# sevenz-rust2 = "0.18"