[package]
name = "backupdbtool"
version = "1.7.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backupdbtool"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
config = "0.15.22"
once_cell = "1.21.4"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
dirs = "6.0.0"
tabled = "0.20.0"
reqwest = { version = "0.13.2", features = ["json"] }
shellexpand = "3.1.2"
humansize = "2.1.3"
rust-s3 = "0.37.1"
cos-rust-sdk = "0.1.2"
futures = "0.3.32"
aes-gcm = "0.10.3"
rand = "0.10.1"
argon2 = "0.5.3"
serde_yml = "0.0.12"
serde_with =  { version = "3.18.0", features = ["base64"] }
# sevenz-rust2 = "0.18"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 'z'    # Optimize for size
lto = true         # Enable Link Time Optimization
codegen-units = 1  # Optimize across the whole codebase (slower build)
strip = true       # Automatically strip symbols from the binary.
